--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" Type="text/css" href="Assets/CSS/reset.css">
+	<link rel="stylesheet" Type="text/css" href="Assets/CSS/style.css">
+	<title>Andrew's Portfolio</title>
+</head>
+<body>
+	<!-- header -->
+	<header>
+		<div class="namebox">
+			<h1>Andrew Johnson</h1>
+		</div>
+		<!-- navbar -->
+		<nav>
+			<ul>
+				<li><a href="index.html">About</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<!-- portfolio content -->
+		<section>
+			<div class="contenttitlebox">
+				<h2>Portfolio</h2>
+			</div>
+			<div class="portfolio">
 
+			</div>
+		</section>
+		<!-- sidebar -->
+		<aside>
+			<div class="sidebartitlebox">
+				<h3>Connect With Me</h3>
+			</div>
+			<div class="icons">
+				<a href="https://github.com/andrewj12763">
+					<img src="Assets/images/GitHubicon.png" alt="GitHub">
+				</a>
+				<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
+					<img src="Assets/images/Linkedinicon.png" alt="Linkedin">
+				</a>
+				<a href="https://stackoverflow.com/users/8690981/andrew-johnson?	tab=profile">
+					<img src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
+				</a>
+			</div>
+		</aside>
+	</main>
+	<!-- footer -->
+	<footer>
+		<h4>@ Copyright 2018 Andrew Johnson</h4>
+	</footer>
+</body>
+</html>
