--- a/contact.html
+++ b/contact.html
@@ -11,49 +11,55 @@
 <body>
 	<!-- header -->
 	<header>
-		<div class="namebox">
-			<h1>Andrew Johnson</h1>
+		<div class="headerbox">
+			<div class="namebox">
+				<h1>Andrew Johnson</h1>
+			</div>
+			<!-- navbar -->	
+			<nav>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</div>
-		<!-- navbar -->
-		<nav>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
 	</header>
 	<main>
 		<!-- contact content -->
 		<section>
-			<div class="contenttitlebox">
-				<h2>Contact</h2>
-			</div>
-			<div class="contact">
-
-			</div>
+			<h2 class="page-title">Contact</h2>
+				<form action="#" class="contact">
+					<label for="name">Name</label>
+					<input type="text" name="name" id="name" placeholder="John Smith">
+					<label for="email">Email</label>
+					<input type="text" name="email" id="email" placeholder="example@gmail.com">
+					<label for="name">Message</label>
+					<textarea rows="10" cols="40" name="message" id="message"></textarea>
+					<input type="submit" value="Submit">
+				</form>
 		</section>
 		<!-- sidebar -->
 		<aside>
 			<div class="sidebartitlebox">
 				<h3>Connect With Me</h3>
 			</div>
-			<div class="icons">
+			<div>
 				<a href="https://github.com/andrewj12763">
-					<img src="Assets/images/GitHubicon.png" alt="GitHub">
+					<img class="icons" src="Assets/images/GitHubicon.png" alt="GitHub">
 				</a>
 				<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
-					<img src="Assets/images/Linkedinicon.png" alt="Linkedin">
+					<img class="icons" src="Assets/images/Linkedinicon.png" alt="Linkedin">
 				</a>
 				<a href="https://stackoverflow.com/users/8690981/andrew-johnson?tab=profile">
-					<img src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
+					<img class="icons" src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
 				</a>
 			</div>
 		</aside>
 	</main>
 	<!-- footer -->
 	<footer>
-		<h4>@ Copyright 2018 Andrew Johnson</h4>
+		<h5>@ Copyright 2018 Andrew Johnson</h5>
 	</footer>
 </body>
 </html>
