--- a/index.html
+++ b/index.html
@@ -11,49 +11,54 @@
 <body>
 	<!-- header -->
 	<header>
-		<div class="namebox">
-			<h1>Andrew Johnson</h1>
+		<div class="headerbox">
+			<div class="namebox">
+				<h1>Andrew Johnson</h1>
+			</div>
+			<!-- navbar -->	
+			<nav>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</div>
-		<!-- navbar -->
-		<nav>
-			<ul>
-				<li><a class="seperate" href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
 	</header>
 	<main>
 		<!-- about me content -->
 		<section>
-			<div class="contenttitlebox">
-				<h2>About Me</h2>
-			</div>
-			<div class="aboutme">
-
+			<div>
+				<h2 class="page-title">About Me</h2>
+				<p>
+					<img class="headshot" src="assets/images/ProfilePicture.jpg" alt="Profile Picture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cum consectetur placeat consequatur praesentium! Voluptates beatae magni vel reprehenderit recusandae maiores aliquam doloribus eligendi, sequi assumenda quae animi sapiente ullam! 
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dignissimos, blanditiis, impedit accusantium, assumenda fugit iure deserunt dicta laboriosam dolorum placeat! Vel culpa explicabo labore facilis ut est eligendi quo.
+				</p>
 			</div>
 		</section>
 		<!-- sidebar -->
 		<aside>
-			<div class="sidebartitlebox">
-				<h3>Connect With Me</h3>
-			</div>
-			<div class="icons">
-				<a href="https://github.com/andrewj12763">
-					<img src="Assets/images/GitHubicon.png" alt="GitHub">
-				</a>
-				<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
-					<img src="Assets/images/Linkedinicon.png" alt="Linkedin">
-				</a>
-				<a href="https://stackoverflow.com/users/8690981/andrew-johnson?tab=profile">
-					<img src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
-				</a>
-			</div>
-		</aside>
-	</main>
-	<!-- footer -->
-	<footer>
-		<h4>@ Copyright 2018 Andrew Johnson</h4>
-	</footer>
-</body>
-</html>
+				<div class="sidebartitlebox">
+					<h3>Connect With Me</h3>
+				</div>
+				<div>
+					<a href="https://github.com/andrewj12763">
+						<img class="icons" src="Assets/images/GitHubicon.png" alt="GitHub">
+					</a>
+					<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
+						<img class="icons" src="Assets/images/Linkedinicon.png" alt="Linkedin">
+					</a>
+					<a href="https://stackoverflow.com/users/8690981/andrew-johnson?tab=profile">
+						<img class="icons" src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
+					</a>
+				</div>
+			</aside>
+		</main>
+		<!-- footer -->
+		<footer>
+			<h5>@ Copyright 2018 Andrew Johnson</h5>
+		</footer>
+	</body>
+	</html>
