--- a/portfolio.html
+++ b/portfolio.html
@@ -11,49 +11,80 @@
 <body>
 	<!-- header -->
 	<header>
-		<div class="namebox">
-			<h1>Andrew Johnson</h1>
+		<div class="headerbox">
+			<div class="namebox">
+				<h1>Andrew Johnson</h1>
+			</div>
+			<!-- navbar -->	
+			<nav>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</div>
-		<!-- navbar -->
-		<nav>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
 	</header>
 	<main>
 		<!-- portfolio content -->
 		<section>
-			<div class="contenttitlebox">
-				<h2>Portfolio</h2>
-			</div>
-			<div class="portfolio">
-
+			<div>
+				<h2 class="page-title">Portfolio</h2>
+				<ul class="portfolio">
+					<li class="portfolio-item">
+						<a href="#">
+							<img src="http://lorempixel.com/270/200" alt="Hangman Image">
+							<h4 class="item-name">Hangman</h4>
+						</a>
+						</li>
+					<li class="portfolio-item">
+						<a href="#">
+							<img src="http://lorempixel.com/270/200" alt="RPG Game Image">
+							<h4 class="item-name">RPG Game</h4>
+						</a>
+					</li>
+					<li class="portfolio-item">
+						<a href="#">
+							<img src="http://lorempixel.com/270/200" alt="Trivia Game Image">
+							<h4 class="item-name">Trivia Game</h4>
+						</a>
+					</li>
+					<li class="portfolio-item">
+						<a href="#">
+							<img src="http://lorempixel.com/270/200" alt="Rutgers Info Widget Image">
+							<h4 class="item-name">Rutgers Info Widget</h4>
+						</a>
+					</li>
+					<li class="portfolio-item">
+						<a href="#">
+							<img src="http://lorempixel.com/270/200" alt="Rock Paper Scissors Image">
+							<h4 class="item-name">Rock Paper Scissors</h4>
+						</a>
+					</li>
+				</ul>					
 			</div>
 		</section>
 		<!-- sidebar -->
 		<aside>
-			<div class="sidebartitlebox">
-				<h3>Connect With Me</h3>
-			</div>
-			<div class="icons">
-				<a href="https://github.com/andrewj12763">
-					<img src="Assets/images/GitHubicon.png" alt="GitHub">
-				</a>
-				<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
-					<img src="Assets/images/Linkedinicon.png" alt="Linkedin">
-				</a>
-				<a href="https://stackoverflow.com/users/8690981/andrew-johnson?tab=profile">
-					<img src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
-				</a>
-			</div>
-		</aside>
-	</main>
-	<!-- footer -->
-	<footer>
-		<h4>@ Copyright 2018 Andrew Johnson</h4>
-	</footer>
-</body>
-</html>
+				<div class="sidebartitlebox">
+					<h3>Connect With Me</h3>
+				</div>
+				<div>
+					<a href="https://github.com/andrewj12763">
+						<img class="icons" src="Assets/images/GitHubicon.png" alt="GitHub">
+					</a>
+					<a href="https://www.linkedin.com/in/andrew-johnson-88b15169/">
+						<img class="icons" src="Assets/images/Linkedinicon.png" alt="Linkedin">
+					</a>
+					<a href="https://stackoverflow.com/users/8690981/andrew-johnson?tab=profile">
+						<img class="icons" src="Assets/images/stackoverflowicon.png" alt="Stackoverflow">
+					</a>
+				</div>
+			</aside>
+		</main>
+		<!-- footer -->
+		<footer>
+			<h5>@ Copyright 2018 Andrew Johnson</h5>
+		</footer>
+	</body>
+	</html>
