--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 			<div>
 				<h2 class="page-title">About Me</h2>
 				<p>
-					<img class="headshot" src="assets/images/ProfilePicture.jpg" alt="Profile Picture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cum consectetur placeat consequatur praesentium! Voluptates beatae magni vel reprehenderit recusandae maiores aliquam doloribus eligendi, sequi assumenda quae animi sapiente ullam! 
+					<img class="headshot" src="assets/images/ProfilePicture.jpg" alt="Profile Picture">I was born in Lehi and grew up around computers. I worked in several industries ranging from solar to mobile testing. I had many opportunities to grow in the quality control and analysis fields and found QA Engineering to be my career goal. I love the outdoors, hunting, fishing, and camping. I spend all my free time out in the mountains or exercising for fun. I like to learn foreign languages. I speak Danish the best out of all of them but I understand Swedish, Norwegian, and a little german. I took a few courses on mechanics and love to work on cars especially classic cars. 
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dignissimos, blanditiis, impedit accusantium, assumenda fugit iure deserunt dicta laboriosam dolorum placeat! Vel culpa explicabo labore facilis ut est eligendi quo.
+					I am now working for CIT electronics as a mobile tester. I love working in good environments with fun teams. I have had many chances to test websites and software, and am now in pursuit of the QA job as we speak. I spend as much time as I can learning to program and improve my skills to help with my career.
 				</p>
 			</div>
 		</section>
