--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" Type="text/css" href="Assets/CSS/reset.css">
-	<link rel="stylesheet" Type="text/css" href="Assets/CSS/style.css">
+	<link rel="stylesheet" Type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" Type="text/css" href="assets/css/style.css">
 	<title>Andrew's Portfolio</title>
 </head>
 <body>
