--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,8 @@
 				<h2 class="page-title">Portfolio</h2>
 				<ul class="portfolio">
 					<li class="portfolio-item">
-						<a href="#">
-							<img src="http://lorempixel.com/270/200" alt="Hangman Image">
+						<a href="https://andrewj12763.github.io/Hangman-Game/">
+							<img src="https://andrewj12763.github.io/Hangman-Game/270/200" alt="Hangman Image">
 							<h4 class="item-name">Hangman</h4>
 						</a>
 						</li>
@@ -45,7 +45,7 @@
 					</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="http://lorempixel.com/270/200" alt="Trivia Game Image">
+							<img src="https://andrewj12763.github.io/week-4-game/270/200" alt="Trivia Game Image">
 							<h4 class="item-name">Trivia Game</h4>
 						</a>
 					</li>
