--- a/portfolio.html
+++ b/portfolio.html
@@ -33,31 +33,31 @@
 				<ul class="portfolio">
 					<li class="portfolio-item">
 						<a href="https://andrewj12763.github.io/Hangman-Game/">
-							<img src="https://andrewj12763.github.io/Hangman-Game/270/200" alt="Hangman Image">
+							<img class="placeholder" src="assets/images/Placeholder.jpg" alt="Hangman Image">
 							<h4 class="item-name">Hangman</h4>
 						</a>
 						</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="http://lorempixel.com/270/200" alt="RPG Game Image">
+							<img class="placeholder" src="assets/images/Placeholder.jpg" alt="RPG Game Image">
 							<h4 class="item-name">RPG Game</h4>
 						</a>
 					</li>
 					<li class="portfolio-item">
-						<a href="#">
-							<img src="https://andrewj12763.github.io/week-4-game/270/200" alt="Trivia Game Image">
+						<a href="https://andrewj12763.github.io/TriviaGame/">
+							<img class="placeholder" src="assets/images/Placeholder.jpg" alt="Trivia Game Image">
 							<h4 class="item-name">Trivia Game</h4>
 						</a>
 					</li>
 					<li class="portfolio-item">
-						<a href="#">
-							<img src="http://lorempixel.com/270/200" alt="Rutgers Info Widget Image">
-							<h4 class="item-name">Rutgers Info Widget</h4>
+						<a href="https://andrewj12763.github.io/Cravings.Reality/">
+							<img class="placeholder" src="assets/images/Placeholder.jpg" alt="Rutgers Info Widget Image">
+							<h4 class="item-name">Cravings.Reality</h4>
 						</a>
 					</li>
 					<li class="portfolio-item">
-						<a href="#">
-							<img src="http://lorempixel.com/270/200" alt="Rock Paper Scissors Image">
+						<a href="https://andrewj12763.github.io/Rock-Paper-ScissorsV2/">
+							<img class="placeholder" src="assets/images/Placeholder.jpg" alt="Rock Paper Scissors Image">
 							<h4 class="item-name">Rock Paper Scissors</h4>
 						</a>
 					</li>
